adding the code to lasgna

--- a/lasagna.html
+++ b/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img src="./images/Chickenlasagna.jpg" alt="Chicken lasagna">
+    <img src="./images/Chickenlasagna.jpg" alt="Chicken lasagna" style="height: 360px; width: 450px;">
     <h1>Chicken Lasagna</h1>
     <h3>Ingredients to make Chicken Lasagna</h3>
     <ul>
